--- a/scripts/BaillargeonCleanToPoint.Rmd
+++ b/scripts/BaillargeonCleanToPoint.Rmd
@@ -109,16 +109,29 @@ f1
 f1_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f1_thaw = f1_dates %>% 
+  filter(thaw_active == "T") 
+
+f1_thaw
+
+f1_active = f1_dates %>% 
+  filter(thaw_active == "A") 
+
+f1_active
+```
+
 # Create points shapefile
 
 ## For F1
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f1_pts = st_as_sf(f1_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f1_thaw_pts = st_as_sf(f1_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f1_pts, "../outputs/points/Baillargeon_points.shp", driver="ESRI Shapefile")
+st_write(f1_thaw_pts, "../outputs/ThawPoints/Baillargeon_thaw_pts.shp", driver="ESRI Shapefile")
 ```
