--- a/scripts/BumaCleanToPoint.Rmd
+++ b/scripts/BumaCleanToPoint.Rmd
@@ -5,7 +5,7 @@ date: '2022-12-07'
 output: html_document
 ---
 
-**MISING DAY OF MONTH!!!**
+**MISING DAY OF MONTH for all thaw depth measures (n=340 which is all observations)**
 
 # Overview
 
@@ -65,6 +65,10 @@ f3$long <- ifelse(f3$long > 0, -f3$long,f3$long)
 NOTE---The Dalton and the Steese are larger "sites," each of which has a lot of plots in them.  But those plots do vary, so don't aggregate.  At the Dalton, there are sites with 0 (unburned), 1 (one fire, which would be 2004/2005 era), 2 fires (which would be 1970's era AND 2004 or 2005), or 3 fires (which would be 1950's, 1970's, and 2004 or 2005.  So if aggregating, what you'd want to do would be to aggregate by those treatments (0, 1, 2, or 3 fires) within the Dalton or Steese "sites."  So, sounds like you'd want to aggregate all the unburned plots at the Dalton, all the 1 burn plots at the Dalton, etc.  I would not aggregate Dalton and Steese plots together, they are functionally different sites (uplands vs. low lands, respectively).
 
 ```{r}
+f3
+```
+
+```{r}
 f3 %>% distinct(site_id,year,month,day,fire_id,burn_unburn)
 ```
 
@@ -72,10 +76,15 @@ f3 %>% distinct(site_id,year,month,day,fire_id,burn_unburn)
 str(f3)
 ```
 ```{r}
+f3 %>% 
+  group_by(thaw_active) %>%
+  count(.)
+```
+**DATA is missing for Day**
+```{r}
 f3_dates = f3 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
-  mutate(julianDate = yday(date)) %>%
-  drop_na(.)
+  mutate(julianDate = yday(date)) 
 
 f3_dates
 ```
@@ -83,17 +92,29 @@ f3_dates
 ```{r}
 f3_dates %>% distinct(julianDate, year, date)
 ```
+# Split by active & thaw
+```{r}
+f3_thaw = f3_dates %>% 
+  filter(thaw_active == "T") 
+
+f3_thaw
+
+f3_active = f3_dates %>% 
+  filter(thaw_active == "A") 
+
+f3_active
+```
 
 # Create points shapefile
 
 ## For F3
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f3_pts = st_as_sf(f3_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f3_thaw_pts = st_as_sf(f3_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f3_pts, "../outputs/AdjustedALT/Buma_points.shp", driver="ESRI Shapefile")
+st_write(f3_thaw_pts, "../outputs/ThawPoints/Buma_thaw_pts.shp", driver="ESRI Shapefile")
 ```
