--- a/scripts/DouglasCleanToPoint.Rmd
+++ b/scripts/DouglasCleanToPoint.Rmd
@@ -78,16 +78,29 @@ f5_dates
 f5_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f5_thaw = f5_dates %>% 
+  filter(thaw_active == "T") 
+
+f5_thaw
+
+f5_active = f5_dates %>% 
+  filter(thaw_active == "A") 
+
+f5_active
+```
+
 # Create points shapefile
 
 ## For F5
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f5_pts = st_as_sf(f5_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f5_active_pts = st_as_sf(f5_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f5_pts, "../outputs/AdjustedALT/Douglas_points.shp", driver="ESRI Shapefile")
+st_write(f5_active_pts, "../outputs/ActivePoints/Douglas_active_pts.shp", driver="ESRI Shapefile")
 ```
