--- a/scripts/GagliotiCleanToPoint.Rmd
+++ b/scripts/GagliotiCleanToPoint.Rmd
@@ -85,16 +85,29 @@ f7_dates
 f7_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f7_thaw = f7_dates %>% 
+  filter(thaw_active == "T") 
+
+f7_thaw
+
+f7_active = f7_dates %>% 
+  filter(thaw_active == "A") 
+
+f7_active
+```
+
 # Create points shapefile
 
 ## For F7
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f7_pts = st_as_sf(f7_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f7_active_pts = st_as_sf(f7_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f7_pts, "../outputs/AdjustedALT/Gaglioti_points.shp", driver="ESRI Shapefile")
+st_write(f7_active_pts, "../outputs/ActivePoints/Gaglioti_active_pts.shp", driver="ESRI Shapefile")
 ```
