--- a/scripts/PaulsonCleanToPoint.Rmd
+++ b/scripts/PaulsonCleanToPoint.Rmd
@@ -72,8 +72,7 @@ str(f12)
 f12_dates = f12 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
   mutate(julianDate = yday(date)) %>%
-  dplyr::select(-notes) %>%
-  drop_na(.)
+  dplyr::select(-notes) 
 
 f12_dates
 ```
@@ -83,16 +82,29 @@ f12_dates
 f12_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f12_thaw = f12_dates %>% 
+  filter(thaw_active == "T") 
+
+f12_thaw
+
+f12_active = f12_dates %>% 
+  filter(thaw_active == "A") 
+
+f12_active
+```
+
 # Create points shapefile
 
 ## For F12
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f12_pts = st_as_sf(f12_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f12_thaw_pts = st_as_sf(f12_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f12_pts, "../outputs/AdjustedALT/Paulson_points.shp", driver="ESRI Shapefile")
+st_write(f12_thaw_pts, "../outputs/ThawPoints/Paulson_thaw_pts.shp", driver="ESRI Shapefile")
 ```
