--- a/scripts/RochaCleanToPoint.Rmd
+++ b/scripts/RochaCleanToPoint.Rmd
@@ -88,16 +88,31 @@ f13_dates
 f13_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f13_thaw = f13_dates %>% 
+  filter(thaw_active == "T") 
+
+f13_thaw
+
+f13_active = f13_dates %>% 
+  filter(thaw_active == "A") 
+
+f13_active
+```
+
 # Create points shapefile
 
 ## For F13
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f13_pts = st_as_sf(f13_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f13_thaw_pts = st_as_sf(f13_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f13_active_pts = st_as_sf(f13_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f13_pts, "../outputs/AdjustedALT/Rocha_points.shp", driver="ESRI Shapefile")
+st_write(f13_thaw_pts, "../outputs/ThawPoints/Rocha_thaw_pts.shp", driver="ESRI Shapefile")
+st_write(f13_active_pts, "../outputs/ActivePoints/Rocha_active_pts.shp", driver="ESRI Shapefile")
 ```
