--- a/scripts/SizovCleanToPoint.Rmd
+++ b/scripts/SizovCleanToPoint.Rmd
@@ -63,7 +63,8 @@ str(f14)
 ```{r}
 f14_dates = f14 %>%
   mutate(date = as.Date(with(., paste(year, month, day,sep="-")), "%Y-%m-%d")) %>%
-  mutate(julianDate = yday(date)) 
+  mutate(julianDate = yday(date)) %>%
+  dplyr::select(-notes)
 
 f14_dates
 ```
@@ -74,16 +75,29 @@ f14_dates
 f14_dates %>% distinct(julianDate, year, date)
 ```
 
+# Split by active & thaw
+```{r}
+f14_thaw = f14_dates %>% 
+  filter(thaw_active == "T") 
+
+f14_thaw
+
+f14_active = f14_dates %>% 
+  filter(thaw_active == "A") 
+
+f14_active
+```
+
 # Create points shapefile
 
 ## For F14
 sf::st_as_sf(dd, coords = c("x","y"))
 ```{r}
-f14_pts = st_as_sf(f14_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+f14_active_pts = st_as_sf(f14_active, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
 
 ### write to shapefile
 ```{r}
-st_write(f14_pts, "../outputs/AdjustedALT/Sizov_points.shp", driver="ESRI Shapefile")
+st_write(f14_active_pts, "../outputs/ActivePoints/Sizov_active_pts.shp", driver="ESRI Shapefile")
 ```
