--- a/scripts/ExploreERA5TempData.Rmd
+++ b/scripts/ExploreERA5TempData.Rmd
@@ -26,6 +26,7 @@ reg_theme = theme_bw() + theme(legend.position = "none") +
         axis.line = element_line(colour = "black"))
 
 ```
+
 # Data
 ```{r}
 manies = read.csv("../data/ERA5forThawPoints/ERA5DailyMeanT2M_ManiesSept30.csv")
@@ -50,11 +51,15 @@ Rocha2019 = read.csv("../data/ERA5forThawPoints/2019ERA5DailyMeanT2M_RochaSept30
 Rocha2020 = read.csv("../data/ERA5forThawPoints/2020ERA5DailyMeanT2M_RochaSept30.csv")
 ```
 
+# Look at data
 ```{r}
 head(manies)
 ```
+# Organize and Clean
+
+## Select, Pivot Air Temp data
 ```{r}
-test1 = manies %>%
+manies1 = manies %>%
   dplyr::select(brl_tnd:year, X20010401_mean_2m_air_temperature:X20010930_mean_2m_air_temperature) %>%
   pivot_longer(
     cols = starts_with("X"),
@@ -64,350 +69,37 @@ test1 = manies %>%
   separate(DateTemp, c("tempDate", NA)) %>% 
     mutate(across(tempDate, ~ . |> str_extract("\\d+") |> as.character())) 
 ```
-
+## Format air temp date
 ```{r}
-test1$tempDate = ymd(test1$tempDate)
-```
-```{r}
-head(test1)
-```
-```{r}
-test1 %>% mutate(tempJuldt = yday(tempDate))
+manies1$tempDate = ymd(manies1$tempDate)
 ```
 
-
-## Active field measures
+## Add Julian day for air temp
 ```{r}
-activedata = read.csv("../data/CleanActive/ManiesCleanActive.csv")
+manies2 = manies1 %>% mutate(tempJuldt = yday(tempDate))
 ```
 
 ```{r}
-unique(activedata$julianDate)
-```
-# Rename Columns?
-```{r}
-
+manies2
 ```
 
-```{r}
-oldnames2001 = c("X20010401_mean_2m_air_temperature", "X20010402_mean_2m_air_temperature", "X20010403_mean_2m_air_temperature", "X20010404_mean_2m_air_temperature",
-"X20010405_mean_2m_air_temperature", "X20010406_mean_2m_air_temperature",
-"X20010407_mean_2m_air_temperature", "X20010408_mean_2m_air_temperature",
-"X20010409_mean_2m_air_temperature", "X20010410_mean_2m_air_temperature",
-"X20010411_mean_2m_air_temperature", "X20010412_mean_2m_air_temperature",
-"X20010413_mean_2m_air_temperature", "X20010414_mean_2m_air_temperature",
-"X20010415_mean_2m_air_temperature", "X20010416_mean_2m_air_temperature",
-"X20010417_mean_2m_air_temperature", "X20010418_mean_2m_air_temperature",
-"X20010419_mean_2m_air_temperature", "X20010420_mean_2m_air_temperature",
-"X20010421_mean_2m_air_temperature", "X20010422_mean_2m_air_temperature",
-"X20010423_mean_2m_air_temperature", "X20010424_mean_2m_air_temperature",
-"X20010425_mean_2m_air_temperature", "X20010426_mean_2m_air_temperature",
-"X20010427_mean_2m_air_temperature", "X20010428_mean_2m_air_temperature",
-"X20010429_mean_2m_air_temperature", "X20010430_mean_2m_air_temperature",
-"X20010501_mean_2m_air_temperature", "X20010502_mean_2m_air_temperature",
-"X20010503_mean_2m_air_temperature", "X20010504_mean_2m_air_temperature",
-"X20010505_mean_2m_air_temperature", "X20010506_mean_2m_air_temperature",
-"X20010507_mean_2m_air_temperature", "X20010508_mean_2m_air_temperature",
-"X20010509_mean_2m_air_temperature", "X20010510_mean_2m_air_temperature",
-"X20010511_mean_2m_air_temperature", "X20010512_mean_2m_air_temperature",
-"X20010513_mean_2m_air_temperature", "X20010514_mean_2m_air_temperature",
-"X20010515_mean_2m_air_temperature", "X20010516_mean_2m_air_temperature", "X20010517_mean_2m_air_temperature", "X20010518_mean_2m_air_temperature",
-"X20010519_mean_2m_air_temperature", "X20010520_mean_2m_air_temperature",
-"X20010521_mean_2m_air_temperature", "X20010522_mean_2m_air_temperature",
-"X20010523_mean_2m_air_temperature", "X20010524_mean_2m_air_temperature",
-"X20010525_mean_2m_air_temperature", "X20010526_mean_2m_air_temperature",
-"X20010527_mean_2m_air_temperature", "X20010528_mean_2m_air_temperature",
-"X20010529_mean_2m_air_temperature", "X20010530_mean_2m_air_temperature",
-"X20010531_mean_2m_air_temperature", "X20010601_mean_2m_air_temperature",
-"X20010602_mean_2m_air_temperature", "X20010603_mean_2m_air_temperature",
-"X20010604_mean_2m_air_temperature", "X20010605_mean_2m_air_temperature",
-"X20010606_mean_2m_air_temperature", "X20010607_mean_2m_air_temperature",
-"X20010608_mean_2m_air_temperature", "X20010609_mean_2m_air_temperature",
-"X20010610_mean_2m_air_temperature", "X20010611_mean_2m_air_temperature",
-"X20010612_mean_2m_air_temperature", "X20010613_mean_2m_air_temperature",
-"X20010614_mean_2m_air_temperature", "X20010615_mean_2m_air_temperature",
-"X20010616_mean_2m_air_temperature", "X20010617_mean_2m_air_temperature",
-"X20010618_mean_2m_air_temperature", "X20010619_mean_2m_air_temperature",
-"X20010620_mean_2m_air_temperature", "X20010621_mean_2m_air_temperature",
-"X20010622_mean_2m_air_temperature", "X20010623_mean_2m_air_temperature",
-"X20010624_mean_2m_air_temperature", "X20010625_mean_2m_air_temperature",
-"X20010626_mean_2m_air_temperature", "X20010627_mean_2m_air_temperature",
-"X20010628_mean_2m_air_temperature", "X20010629_mean_2m_air_temperature",
-"X20010630_mean_2m_air_temperature", "X20010701_mean_2m_air_temperature",
-"X20010702_mean_2m_air_temperature", "X20010703_mean_2m_air_temperature",
-"X20010704_mean_2m_air_temperature", "X20010705_mean_2m_air_temperature",
-"X20010706_mean_2m_air_temperature", "X20010707_mean_2m_air_temperature",
-"X20010708_mean_2m_air_temperature", "X20010709_mean_2m_air_temperature",
-"X20010710_mean_2m_air_temperature", "X20010711_mean_2m_air_temperature",
-"X20010712_mean_2m_air_temperature", "X20010713_mean_2m_air_temperature",
-"X20010714_mean_2m_air_temperature", "X20010715_mean_2m_air_temperature",
-"X20010716_mean_2m_air_temperature", "X20010717_mean_2m_air_temperature",
-"X20010718_mean_2m_air_temperature", "X20010719_mean_2m_air_temperature",
-"X20010720_mean_2m_air_temperature", "X20010721_mean_2m_air_temperature",  "X20010722_mean_2m_air_temperature", "X20010723_mean_2m_air_temperature",
-"X20010724_mean_2m_air_temperature", "X20010725_mean_2m_air_temperature",
-"X20010726_mean_2m_air_temperature", "X20010727_mean_2m_air_temperature",
-"X20010728_mean_2m_air_temperature", "X20010729_mean_2m_air_temperature",
-"X20010730_mean_2m_air_temperature", "X20010731_mean_2m_air_temperature",
-"X20010801_mean_2m_air_temperature", "X20010802_mean_2m_air_temperature",
-"X20010803_mean_2m_air_temperature", "X20010804_mean_2m_air_temperature",
-"X20010805_mean_2m_air_temperature", "X20010806_mean_2m_air_temperature",
-"X20010807_mean_2m_air_temperature", "X20010808_mean_2m_air_temperature",
-"X20010809_mean_2m_air_temperature", "X20010810_mean_2m_air_temperature", "X20010811_mean_2m_air_temperature", "X20010812_mean_2m_air_temperature",
-"X20010813_mean_2m_air_temperature", "X20010814_mean_2m_air_temperature",
-"X20010815_mean_2m_air_temperature", "X20010816_mean_2m_air_temperature",
-"X20010817_mean_2m_air_temperature", "X20010818_mean_2m_air_temperature",
-"X20010819_mean_2m_air_temperature", "X20010820_mean_2m_air_temperature",
-"X20010821_mean_2m_air_temperature", "X20010822_mean_2m_air_temperature",
-"X20010823_mean_2m_air_temperature", "X20010824_mean_2m_air_temperature",
-"X20010825_mean_2m_air_temperature", "X20010826_mean_2m_air_temperature",
-"X20010827_mean_2m_air_temperature", "X20010828_mean_2m_air_temperature",
-"X20010829_mean_2m_air_temperature", "X20010830_mean_2m_air_temperature",
-"X20010831_mean_2m_air_temperature", "X20010901_mean_2m_air_temperature",
-"X20010902_mean_2m_air_temperature", "X20010903_mean_2m_air_temperature",
-"X20010904_mean_2m_air_temperature", "X20010905_mean_2m_air_temperature",
-"X20010906_mean_2m_air_temperature", "X20010907_mean_2m_air_temperature",
-"X20010908_mean_2m_air_temperature", "X20010909_mean_2m_air_temperature",
-"X20010910_mean_2m_air_temperature", "X20010911_mean_2m_air_temperature",
-"X20010912_mean_2m_air_temperature", "X20010913_mean_2m_air_temperature",
-"X20010914_mean_2m_air_temperature", "X20010915_mean_2m_air_temperature",
- "X20010916_mean_2m_air_temperature", "X20010917_mean_2m_air_temperature",
-"X20010918_mean_2m_air_temperature", "X20010919_mean_2m_air_temperature",
-"X20010920_mean_2m_air_temperature", "X20010921_mean_2m_air_temperature", "X20010922_mean_2m_air_temperature", "X20010923_mean_2m_air_temperature",  "X20010924_mean_2m_air_temperature", "X20010925_mean_2m_air_temperature", "X20010926_mean_2m_air_temperature", "X20010927_mean_2m_air_temperature", "X20010928_mean_2m_air_temperature", "X20010929_mean_2m_air_temperature", "X20010930_mean_2m_air_temperature")
-```
-
-```{r}
-oldnames2005 = c("X20050401_mean_2m_air_temperature", "X20050402_mean_2m_air_temperature", "X20050403_mean_2m_air_temperature", "X20050404_mean_2m_air_temperature",
-"X20050405_mean_2m_air_temperature", "X20050406_mean_2m_air_temperature",
-"X20050407_mean_2m_air_temperature", "X20050408_mean_2m_air_temperature",
-"X20050409_mean_2m_air_temperature", "X20050410_mean_2m_air_temperature",
-"X20050411_mean_2m_air_temperature", "X20050412_mean_2m_air_temperature",
-"X20050413_mean_2m_air_temperature", "X20050414_mean_2m_air_temperature",
-"X20050415_mean_2m_air_temperature", "X20050416_mean_2m_air_temperature",
-"X20050417_mean_2m_air_temperature", "X20050418_mean_2m_air_temperature",
-"X20050419_mean_2m_air_temperature", "X20050420_mean_2m_air_temperature",
-"X20050421_mean_2m_air_temperature", "X20050422_mean_2m_air_temperature",
-"X20050423_mean_2m_air_temperature", "X20050424_mean_2m_air_temperature",
-"X20050425_mean_2m_air_temperature", "X20050426_mean_2m_air_temperature",
-"X20050427_mean_2m_air_temperature", "X20050428_mean_2m_air_temperature",
-"X20050429_mean_2m_air_temperature", "X20050430_mean_2m_air_temperature",
-"X20050501_mean_2m_air_temperature", "X20050502_mean_2m_air_temperature",
-"X20050503_mean_2m_air_temperature", "X20050504_mean_2m_air_temperature",
-"X20050505_mean_2m_air_temperature", "X20050506_mean_2m_air_temperature",
-"X20050507_mean_2m_air_temperature", "X20050508_mean_2m_air_temperature",
-"X20050509_mean_2m_air_temperature", "X20050510_mean_2m_air_temperature",
-"X20050511_mean_2m_air_temperature", "X20050512_mean_2m_air_temperature",
-"X20050513_mean_2m_air_temperature", "X20050514_mean_2m_air_temperature",
-"X20050515_mean_2m_air_temperature", "X20050516_mean_2m_air_temperature", "X20050517_mean_2m_air_temperature", "X20050518_mean_2m_air_temperature",
-"X20050519_mean_2m_air_temperature", "X20050520_mean_2m_air_temperature",
-"X20050521_mean_2m_air_temperature", "X20050522_mean_2m_air_temperature",
-"X20050523_mean_2m_air_temperature", "X20050524_mean_2m_air_temperature",
-"X20050525_mean_2m_air_temperature", "X20050526_mean_2m_air_temperature",
-"X20050527_mean_2m_air_temperature", "X20050528_mean_2m_air_temperature",
-"X20050529_mean_2m_air_temperature", "X20050530_mean_2m_air_temperature",
-"X20050531_mean_2m_air_temperature", "X20050601_mean_2m_air_temperature",
-"X20050602_mean_2m_air_temperature", "X20050603_mean_2m_air_temperature",
-"X20050604_mean_2m_air_temperature", "X20050605_mean_2m_air_temperature",
-"X20050606_mean_2m_air_temperature", "X20050607_mean_2m_air_temperature",
-"X20050608_mean_2m_air_temperature", "X20050609_mean_2m_air_temperature",
-"X20050610_mean_2m_air_temperature", "X20050611_mean_2m_air_temperature",
-"X20050612_mean_2m_air_temperature", "X20050613_mean_2m_air_temperature",
-"X20050614_mean_2m_air_temperature", "X20050615_mean_2m_air_temperature",
-"X20050616_mean_2m_air_temperature", "X20050617_mean_2m_air_temperature",
-"X20050618_mean_2m_air_temperature", "X20050619_mean_2m_air_temperature",
-"X20050620_mean_2m_air_temperature", "X20050621_mean_2m_air_temperature",
-"X20050622_mean_2m_air_temperature", "X20050623_mean_2m_air_temperature",
-"X20050624_mean_2m_air_temperature", "X20050625_mean_2m_air_temperature",
-"X20050626_mean_2m_air_temperature", "X20050627_mean_2m_air_temperature",
-"X20050628_mean_2m_air_temperature", "X20050629_mean_2m_air_temperature",
-"X20050630_mean_2m_air_temperature", "X20050701_mean_2m_air_temperature",
-"X20050702_mean_2m_air_temperature", "X20050703_mean_2m_air_temperature",
-"X20050704_mean_2m_air_temperature", "X20050705_mean_2m_air_temperature",
-"X20050706_mean_2m_air_temperature", "X20050707_mean_2m_air_temperature",
-"X20050708_mean_2m_air_temperature", "X20050709_mean_2m_air_temperature",
-"X20050710_mean_2m_air_temperature", "X20050711_mean_2m_air_temperature",
-"X20050712_mean_2m_air_temperature", "X20050713_mean_2m_air_temperature",
-"X20050714_mean_2m_air_temperature", "X20050715_mean_2m_air_temperature",
-"X20050716_mean_2m_air_temperature", "X20050717_mean_2m_air_temperature",
-"X20050718_mean_2m_air_temperature", "X20050719_mean_2m_air_temperature",
-"X20050720_mean_2m_air_temperature", "X20050721_mean_2m_air_temperature",  "X20050722_mean_2m_air_temperature", "X20050723_mean_2m_air_temperature",
-"X20050724_mean_2m_air_temperature", "X20050725_mean_2m_air_temperature",
-"X20050726_mean_2m_air_temperature", "X20050727_mean_2m_air_temperature",
-"X20050728_mean_2m_air_temperature", "X20050729_mean_2m_air_temperature",
-"X20050730_mean_2m_air_temperature", "X20050731_mean_2m_air_temperature",
-"X20050801_mean_2m_air_temperature", "X20050802_mean_2m_air_temperature",
-"X20050803_mean_2m_air_temperature", "X20050804_mean_2m_air_temperature",
-"X20050805_mean_2m_air_temperature", "X20050806_mean_2m_air_temperature",
-"X20050807_mean_2m_air_temperature", "X20050808_mean_2m_air_temperature",
-"X20050809_mean_2m_air_temperature", "X20050810_mean_2m_air_temperature", "X20050811_mean_2m_air_temperature", "X20050812_mean_2m_air_temperature",
-"X20050813_mean_2m_air_temperature", "X20050814_mean_2m_air_temperature",
-"X20050815_mean_2m_air_temperature", "X20050816_mean_2m_air_temperature",
-"X20050817_mean_2m_air_temperature", "X20050818_mean_2m_air_temperature",
-"X20050819_mean_2m_air_temperature", "X20050820_mean_2m_air_temperature",
-"X20050821_mean_2m_air_temperature", "X20050822_mean_2m_air_temperature",
-"X20050823_mean_2m_air_temperature", "X20050824_mean_2m_air_temperature",
-"X20050825_mean_2m_air_temperature", "X20050826_mean_2m_air_temperature",
-"X20050827_mean_2m_air_temperature", "X20050828_mean_2m_air_temperature",
-"X20050829_mean_2m_air_temperature", "X20050830_mean_2m_air_temperature",
-"X20050831_mean_2m_air_temperature", "X20050901_mean_2m_air_temperature",
-"X20050902_mean_2m_air_temperature", "X20050903_mean_2m_air_temperature",
-"X20050904_mean_2m_air_temperature", "X20050905_mean_2m_air_temperature",
-"X20050906_mean_2m_air_temperature", "X20050907_mean_2m_air_temperature",
-"X20050908_mean_2m_air_temperature", "X20050909_mean_2m_air_temperature",
-"X20050910_mean_2m_air_temperature", "X20050911_mean_2m_air_temperature",
-"X20050912_mean_2m_air_temperature", "X20050913_mean_2m_air_temperature",
-"X20050914_mean_2m_air_temperature", "X20050915_mean_2m_air_temperature",
- "X20050916_mean_2m_air_temperature", "X20050917_mean_2m_air_temperature",
-"X20050918_mean_2m_air_temperature", "X20050919_mean_2m_air_temperature",
-"X20050920_mean_2m_air_temperature", "X20050921_mean_2m_air_temperature", "X20050922_mean_2m_air_temperature", "X20050923_mean_2m_air_temperature",  "X20050924_mean_2m_air_temperature", "X20050925_mean_2m_air_temperature", "X20050926_mean_2m_air_temperature", "X20050927_mean_2m_air_temperature", "X20050928_mean_2m_air_temperature", "X20050929_mean_2m_air_temperature", "X20050930_mean_2m_air_temperature")
-```
-
-```{r}
-oldnames2008 = c("X20080401_mean_2m_air_temperature", "X20080402_mean_2m_air_temperature", "X20080403_mean_2m_air_temperature", "X20080404_mean_2m_air_temperature",
-"X20080405_mean_2m_air_temperature", "X20080406_mean_2m_air_temperature",
-"X20080407_mean_2m_air_temperature", "X20080408_mean_2m_air_temperature",
-"X20080409_mean_2m_air_temperature", "X20080410_mean_2m_air_temperature",
-"X20080411_mean_2m_air_temperature", "X20080412_mean_2m_air_temperature",
-"X20080413_mean_2m_air_temperature", "X20080414_mean_2m_air_temperature",
-"X20080415_mean_2m_air_temperature", "X20080416_mean_2m_air_temperature",
-"X20080417_mean_2m_air_temperature", "X20080418_mean_2m_air_temperature",
-"X20080419_mean_2m_air_temperature", "X20080420_mean_2m_air_temperature",
-"X20080421_mean_2m_air_temperature", "X20080422_mean_2m_air_temperature",
-"X20080423_mean_2m_air_temperature", "X20080424_mean_2m_air_temperature",
-"X20080425_mean_2m_air_temperature", "X20080426_mean_2m_air_temperature",
-"X20080427_mean_2m_air_temperature", "X20080428_mean_2m_air_temperature",
-"X20080429_mean_2m_air_temperature", "X20080430_mean_2m_air_temperature",
-"X20080501_mean_2m_air_temperature", "X20080502_mean_2m_air_temperature",
-"X20080503_mean_2m_air_temperature", "X20080504_mean_2m_air_temperature",
-"X20080505_mean_2m_air_temperature", "X20080506_mean_2m_air_temperature",
-"X20080507_mean_2m_air_temperature", "X20080508_mean_2m_air_temperature",
-"X20080509_mean_2m_air_temperature", "X20080510_mean_2m_air_temperature",
-"X20080511_mean_2m_air_temperature", "X20080512_mean_2m_air_temperature",
-"X20080513_mean_2m_air_temperature", "X20080514_mean_2m_air_temperature",
-"X20080515_mean_2m_air_temperature", "X20080516_mean_2m_air_temperature", "X20080517_mean_2m_air_temperature", "X20080518_mean_2m_air_temperature",
-"X20080519_mean_2m_air_temperature", "X20080520_mean_2m_air_temperature",
-"X20080521_mean_2m_air_temperature", "X20080522_mean_2m_air_temperature",
-"X20080523_mean_2m_air_temperature", "X20080524_mean_2m_air_temperature",
-"X20080525_mean_2m_air_temperature", "X20080526_mean_2m_air_temperature",
-"X20080527_mean_2m_air_temperature", "X20080528_mean_2m_air_temperature",
-"X20080529_mean_2m_air_temperature", "X20080530_mean_2m_air_temperature",
-"X20080531_mean_2m_air_temperature", "X20080601_mean_2m_air_temperature",
-"X20080602_mean_2m_air_temperature", "X20080603_mean_2m_air_temperature",
-"X20080604_mean_2m_air_temperature", "X20080605_mean_2m_air_temperature",
-"X20080606_mean_2m_air_temperature", "X20080607_mean_2m_air_temperature",
-"X20080608_mean_2m_air_temperature", "X20080609_mean_2m_air_temperature",
-"X20080610_mean_2m_air_temperature", "X20080611_mean_2m_air_temperature",
-"X20080612_mean_2m_air_temperature", "X20080613_mean_2m_air_temperature",
-"X20080614_mean_2m_air_temperature", "X20080615_mean_2m_air_temperature",
-"X20080616_mean_2m_air_temperature", "X20080617_mean_2m_air_temperature",
-"X20080618_mean_2m_air_temperature", "X20080619_mean_2m_air_temperature",
-"X20080620_mean_2m_air_temperature", "X20080621_mean_2m_air_temperature",
-"X20080622_mean_2m_air_temperature", "X20080623_mean_2m_air_temperature",
-"X20080624_mean_2m_air_temperature", "X20080625_mean_2m_air_temperature",
-"X20080626_mean_2m_air_temperature", "X20080627_mean_2m_air_temperature",
-"X20080628_mean_2m_air_temperature", "X20080629_mean_2m_air_temperature",
-"X20080630_mean_2m_air_temperature", "X20080701_mean_2m_air_temperature",
-"X20080702_mean_2m_air_temperature", "X20080703_mean_2m_air_temperature",
-"X20080704_mean_2m_air_temperature", "X20080705_mean_2m_air_temperature",
-"X20080706_mean_2m_air_temperature", "X20080707_mean_2m_air_temperature",
-"X20080708_mean_2m_air_temperature", "X20080709_mean_2m_air_temperature",
-"X20080710_mean_2m_air_temperature", "X20080711_mean_2m_air_temperature",
-"X20080712_mean_2m_air_temperature", "X20080713_mean_2m_air_temperature",
-"X20080714_mean_2m_air_temperature", "X20080715_mean_2m_air_temperature",
-"X20080716_mean_2m_air_temperature", "X20080717_mean_2m_air_temperature",
-"X20080718_mean_2m_air_temperature", "X20080719_mean_2m_air_temperature",
-"X20080720_mean_2m_air_temperature", "X20080721_mean_2m_air_temperature",  "X20080722_mean_2m_air_temperature", "X20080723_mean_2m_air_temperature",
-"X20080724_mean_2m_air_temperature", "X20080725_mean_2m_air_temperature",
-"X20080726_mean_2m_air_temperature", "X20080727_mean_2m_air_temperature",
-"X20080728_mean_2m_air_temperature", "X20080729_mean_2m_air_temperature",
-"X20080730_mean_2m_air_temperature", "X20080731_mean_2m_air_temperature",
-"X20080801_mean_2m_air_temperature", "X20080802_mean_2m_air_temperature",
-"X20080803_mean_2m_air_temperature", "X20080804_mean_2m_air_temperature",
-"X20080805_mean_2m_air_temperature", "X20080806_mean_2m_air_temperature",
-"X20080807_mean_2m_air_temperature", "X20080808_mean_2m_air_temperature",
-"X20080809_mean_2m_air_temperature", "X20080810_mean_2m_air_temperature", "X20080811_mean_2m_air_temperature", "X20080812_mean_2m_air_temperature",
-"X20080813_mean_2m_air_temperature", "X20080814_mean_2m_air_temperature",
-"X20080815_mean_2m_air_temperature", "X20080816_mean_2m_air_temperature",
-"X20080817_mean_2m_air_temperature", "X20080818_mean_2m_air_temperature",
-"X20080819_mean_2m_air_temperature", "X20080820_mean_2m_air_temperature",
-"X20080821_mean_2m_air_temperature", "X20080822_mean_2m_air_temperature",
-"X20080823_mean_2m_air_temperature", "X20080824_mean_2m_air_temperature",
-"X20080825_mean_2m_air_temperature", "X20080826_mean_2m_air_temperature",
-"X20080827_mean_2m_air_temperature", "X20080828_mean_2m_air_temperature",
-"X20080829_mean_2m_air_temperature", "X20080830_mean_2m_air_temperature",
-"X20080831_mean_2m_air_temperature", "X20080901_mean_2m_air_temperature",
-"X20080902_mean_2m_air_temperature", "X20080903_mean_2m_air_temperature",
-"X20080904_mean_2m_air_temperature", "X20080905_mean_2m_air_temperature",
-"X20080906_mean_2m_air_temperature", "X20080907_mean_2m_air_temperature",
-"X20080908_mean_2m_air_temperature", "X20080909_mean_2m_air_temperature",
-"X20080910_mean_2m_air_temperature", "X20080911_mean_2m_air_temperature",
-"X20080912_mean_2m_air_temperature", "X20080913_mean_2m_air_temperature",
-"X20080914_mean_2m_air_temperature", "X20080915_mean_2m_air_temperature",
- "X20080916_mean_2m_air_temperature", "X20080917_mean_2m_air_temperature",
-"X20080918_mean_2m_air_temperature", "X20080919_mean_2m_air_temperature",
-"X20080920_mean_2m_air_temperature", "X20080921_mean_2m_air_temperature", "X20080922_mean_2m_air_temperature", "X20080923_mean_2m_air_temperature",  "X20080924_mean_2m_air_temperature", "X20080925_mean_2m_air_temperature", "X20080926_mean_2m_air_temperature", "X20080927_mean_2m_air_temperature", "X20080928_mean_2m_air_temperature", "X20080929_mean_2m_air_temperature", "X20080930_mean_2m_air_temperature")
-```
-
-
-```{r}
-newnames = c("x91", "x92", "x93", "x94", "x95", "x96", "x97", "x98", "x99", "x100", "x101", "x102", "x103", "x104", "x105", "x106", "x107", "x108", "x109", "x110", "x111", "x112", "x113", "x114", "x115", "x116", "x117", "x118", "x119", "x120", "x121", "x122", "x123", "x124", "x125", "x126", "x127", "x128", "x129", "x130", "x131", "x132", "x133", "x134", "x135", "x136", "x137", "x138", "x139", "x140", "x141", "x142", "x143", "x144", "x145", "x146", "x147", "x148", "x149", "x150", "x151", "x152", "x153", "x154", "x155", "x156", "x157", "x158", "x159", "x160", "x161", "x162", "x163", "x164", "x165", "x166", "x167", "x168", "x169", "x170", "x171", "x172", "x173", "x174", "x175", "x176", "x177", "x178", "x179", "x180", "x181", "x182", "x183", "x184", "x185", "x186", "x187", "x188", "x189", "x190", "x191", "x192", "x193", "x194", "x195", "x196", "x197", "x198", "x199", "x200","x201", "x202", "x203", "x204", "x205", "x206", "x207", "x208", "x209", "x210", "x211", "x212", "x213", "x214", "x215", "x216", "x217", "x218", "x219", "x220", "x221", "x222", "x223", "x224", "x225", "x226", "x227", "x228", "x229", "x230", "x231", "x232", "x233", "x234", "x235", "x236", "x237", "x238", "x239", "x240", "x241", "x242", "x243", "x244", "x245", "x246", "x247", "x248", "x249", "x250", "x251", "x252", "x253", "x254", "x255", "x256", "x257", "x258", "x259", "x260", "x261", "x262", "x263", "x264", "x265", "x266", "x267", "x268", "x269", "x270", "x271", "x272", "x273")
-```
-
-```{r}
-head(manies)
-```
-```{r}
-names(manies)
-```
-
-```{r}
-manies %>%
-  rename(vars(matches('^_mean_2m_air_temperature\\d+$')), ~ str_replace(., ~ newnames)) %>%
-  pivot_longer(
-    cols = num_range("x", 91:273),
-    names_to = "JulianTemp",
-    values_to = "TempC",
-    values_drop_na = TRUE) %>% 
-    mutate(across(JulianTemp, ~ . |> str_extract("\\d+") |> as.numeric()))
-
-```
-
-```{r}
-manies1 = manies %>%
-  dplyr::select(brl_tnd:year, X20010401_mean_2m_air_temperature:X20010930_mean_2m_air_temperature) %>%
-  rename_at(vars(oldnames), ~ newnames) %>%
-  pivot_longer(
-    cols = num_range("x", 91:273),
-    names_to = "JulianTemp",
-    values_to = "TempC",
-    values_drop_na = TRUE) %>% 
-    mutate(across(JulianTemp, ~ . |> str_extract("\\d+") |> as.numeric()))
-
-```
-
-```{r}
-natali2016_1 = natali2016 %>%
-  dplyr::select(brl_tnd:year, X20160401_mean_2m_air_temperature:X20160930_mean_2m_air_temperature) %>%
-  rename_at(vars(oldnames), ~ newnames) %>%
-  pivot_longer(
-    cols = num_range("x", 91:273),
-    names_to = "JulianTemp",
-    values_to = "TempC",
-    values_drop_na = TRUE) %>% 
-    mutate(across(JulianTemp, ~ . |> str_extract("\\d+") |> as.numeric()))
-
-```
 
 # Plot Temp data by day
+
+## Manies
 243 267 215 266 218
 ```{r}
-ggplot(manies1, aes(x=JulianTemp, y=TempC, color=site_id)) +
+ggplot(manies2, aes(x=tempJuldt, y=TempC, color=site_id)) +
   geom_line() +
-  geom_vline(xintercept=215) +
-  geom_vline(xintercept=218) +
-  geom_vline(xintercept=243) +
-  geom_vline(xintercept=266) +
-  geom_vline(xintercept=267) +
+  geom_vline(xintercept=215) + # Aug 3
+  geom_vline(xintercept=218) + # Aug 6
+  geom_vline(xintercept=243) + # Aug 31
+  geom_vline(xintercept=266) + # Sept 23
+  geom_vline(xintercept=267) + #Sept 24
   reg_theme +
   xlab("Julian date") +
-  ylab("Temperature in degrees Celecius")
+  ylab("Temperature in degrees Celecius") +
+  geom_text(aes(x=215, label="Aug 3", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8)) +
+  geom_text(aes(x=243, label="Aug 31", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8)) +
+  geom_text(aes(x=266, label="Sept 23", y=-5), colour="grey", angle=90, vjust = -0.5, text=element_text(size=8))
 ```
