--- a/scripts/BreenCleanToPoint.Rmd
+++ b/scripts/BreenCleanToPoint.Rmd
@@ -79,6 +79,10 @@ f2_pts = st_as_sf(f2_dates, coords = c("long","lat"), crs = 4326, remove = FALSE
 
 
 ### write to shapefile
+```{r eval=FALSE, include=FALSE}
+st_write(f2_pts, "../outputs/AdjustedALT/Breen_pts.shp", driver="ESRI Shapefile")
+```
+
 ```{r}
-st_write(f2_pts, "../outputs/AdjustedALT/Breen_points.shp", driver="ESRI Shapefile")
+st_write(f2_pts, "../outputs/allPoints/Breen_pts.shp", driver="ESRI Shapefile")
 ```
