--- a/scripts/BumaCleanToPoint.Rmd
+++ b/scripts/BumaCleanToPoint.Rmd
@@ -113,8 +113,15 @@ sf::st_as_sf(dd, coords = c("x","y"))
 f3_thaw_pts = st_as_sf(f3_thaw, coords = c("long","lat"), crs = 4326, remove = FALSE)
 ```
 
+```{r}
+f3_pts = st_as_sf(f3_dates, coords = c("long","lat"), crs = 4326, remove = FALSE)
+```
 
 ### write to shapefile
-```{r}
+```{r eval=FALSE, include=FALSE}
 st_write(f3_thaw_pts, "../outputs/ThawPoints/Buma_thaw_pts.shp", driver="ESRI Shapefile")
+```
+
+```{r}
+st_write(f3_pts, "../outputs/allPoints/Buma_pts.shp", driver="ESRI Shapefile")
 ```
