--- a/scripts/NataliCleanToPoint.Rmd
+++ b/scripts/NataliCleanToPoint.Rmd
@@ -101,33 +101,41 @@ There are 732 measurements as thaw depth from site_id YKD
 ```{r}
 f9_dates %>% filter(thaw_active == "T")
 ```
+# Fix longitude missing negative issue
 ```{r}
-f9_dates %>% filter(long > 0)
+( f9_long_fix = f9_dates %>% filter(long > 0) %>% mutate(across(long, ~ .x*(-1))) )
+```
+Grab existing negative longitude points
+```{r}
+( f9_long_correct = f9_dates %>% filter(long < 0) )
+```
+Combine correct and fixed longitude
+```{r}
+( f9_all_long = f9_long_correct %>% bind_rows(f9_long_fix) )
+```
+
+
+```{r}
+f9_all_long %>% filter(site_id =="YKD")
 ```
 
 ```{r}
-f9_dates %>% filter(site_id =="YKD")
-```
-
-```{r}
-f9_dates %>% distinct(julianDate, year, date)
+f9_all_long %>% distinct(julianDate, year, date)
 ```
 ```{r}
-f9_dates %>% filter_all(any_vars(is.na(.))) 
+f9_all_long %>% filter_all(any_vars(is.na(.))) 
 ```
 
 # Split by active & thaw
 ```{r}
-f9_all = f9_dates %>% 
-  drop_na(long) %>%
-  drop_na(lat)
+f9_all = f9_all_long
 
-f9_thaw = f9_dates %>% 
+f9_thaw = f9_all_long %>% 
   filter(thaw_active == "T") %>%
   drop_na(long) %>%
   drop_na(lat)
 
-f9_active = f9_dates %>% 
+f9_active = f9_all_long %>% 
   filter(thaw_active == "A") %>%
   drop_na(long) %>%
   drop_na(lat)
